--- a/Assets/scss/styles.scss
+++ b/Assets/scss/styles.scss
@@ -123,6 +123,10 @@ body {
                font-size: 0.975rem;
                display: block;
             }
+
+            &-value {
+               color: var(--desaturated-blue);
+            }
          }
 
          &-btn {
@@ -144,7 +148,6 @@ body {
       display: grid;
       grid-template-columns: 85%;
       grid-template-rows: auto auto;
-      gap: 0.9rem;
       justify-content: center;
       margin-bottom: var(--margin);
 
@@ -165,6 +168,7 @@ body {
 
       & > .primary {
          background-color: var(--bright-blue);
+         box-shadow: 0 10px 10px rgba(100, 100, 197, 0.5);
          color: #fff;
 
          &:hover {
