--- a/Assets/scss/styles.scss
+++ b/Assets/scss/styles.scss
@@ -56,6 +56,10 @@ body {
    max-width: 300px;
    border-radius: var(--border-radius);
 
+   @media (max-width: 500px) {
+      transform: scale(0.8);
+   }
+
    @include min-media {
       max-width: 370px;
    }
